# bebop_simulator

./: README.md
bebop_gazebo/: CMakeLists.txt  package.xml
bebop_gazebo/launch/: actions.launch  bebop_empty_world.launch  bebop_moving_helipad.launch  controller.launch  demo.launch  let_the_good_times_roll.launch  spawn_bebop.launch
bebop_gazebo/models/ar_helipad/: model.config  model.sdf
bebop_gazebo/models/ar_helipad/materials/scripts/: helipad.material  marker4.material
bebop_gazebo/models/marker3/: model.config  model.sdf
bebop_gazebo/models/marker3/materials/scripts/: marker3.material
bebop_gazebo/params/: params.yaml  twist_mux.yaml
bebop_gazebo/rviz/: rviz.rviz
bebop_gazebo/src/: bebop_odom_to_tf.cpp  emergency_action.cpp  floatie.py  hector_to_bebop.py  moving_helipad.py
bebop_gazebo/urdf/: bebop.gazebo.xacro  bebop.urdf.xacro  bebop_aerodynamics.gazebo.xacro  bebop_base.urdf.xacro  bebop_controller.gazebo.xacro  bebop_plugins.gazebo.xacro  bebop_propulsion.gazebo.xacro  bebop_sensors.gazebo.xacro
