<?xml version="1.0"?>
<package format="2">
  <name>bebop_gazebo</name>
  <version>0.0.0</version>
  <description>The bebop_gazebo package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">gstavrinos</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
