<?xml version="1.0"?>
<package format="1">
  <name>bebop_gazebo</name>
  <version>0.0.0</version>
  <description>The bebop_gazebo package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">gstavrinos</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>tf2</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>hector_quadrotor_actions</build_depend>
  <build_depend>hector_quadrotor_interface</build_depend>
  
  <run_depend>tf2</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>twist_mux</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_to_tf</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_uav_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>hector_sensors_gazebo</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>hector_quadrotor_actions</run_depend>
  <run_depend>hector_quadrotor_interface</run_depend>
  <run_depend>hector_quadrotor_gazebo_plugins</run_depend>
  <run_depend>hector_quadrotor_controller_gazebo</run_depend>

  <export>
  </export>

</package>
